# rupixel

./: .gitignore  README.md  package.json
.metaharness/: bench.json
docs/: ADR-264-pixelrag-rust-port-on-ruvector.md  BENCH.md  BENCHMARK.md  app.js  corpus.json  index.html  live.css  live.html  live.js  style.css  visual.html  visual.js
docs/adr/: ADR-265-real-time-video-visual-rag-rupixel.md  ADR-266-midstream-streaming-frame-ingestion.md  ADR-267-photonlayer-optical-front-end-video-frames.md
rust/: README.md
rust/pixelrag-cli/: Cargo.toml
rust/pixelrag-cli/sidecar/: clip_sidecar.mjs  describe-proxy.mjs  embed_sidecar.mjs  package-lock.json  package.json  render_sidecar.mjs
rust/pixelrag-cli/sidecar/.claude-flow/data/: pending-insights.jsonl
rust/pixelrag-cli/src/: bench.rs  bench_visual.rs  main.rs
rust/pixelrag-core/: Cargo.toml
rust/pixelrag-core/src/: config.rs  embedding.rs  index.rs  lib.rs  pipeline.rs  search.rs  tile.rs
rust/pixelrag-encoder/: Cargo.toml
rust/pixelrag-encoder/src/: cache.rs  lib.rs  model.rs  onnx.rs  sidecar.rs  synthetic.rs
rust/pixelrag-render/: Cargo.toml
rust/pixelrag-render/src/: cache.rs  lib.rs  pdf.rs  web.rs
rust/pixelrag-serve/: Cargo.toml
rust/pixelrag-serve/src/: config.rs  handlers.rs  http.rs  lib.rs
tests/fixtures/pixelrag/: README.md  ground-truth.json  queries.json
tests/fixtures/pixelrag/compare/text/: ground-truth.json  queries.json
tests/fixtures/pixelrag/compare/text/tiles/: doc-00.txt  doc-01.txt  doc-02.txt  doc-03.txt  doc-04.txt  doc-05.txt  doc-06.txt  doc-07.txt
tests/fixtures/pixelrag/tiles/: tile-000.txt  tile-001.txt  tile-002.txt  tile-003.txt  tile-004.txt  tile-005.txt  tile-006.txt  tile-007.txt  tile-008.txt  tile-009.txt  tile-010.txt  tile-011.txt  tile-012.txt  tile-013.txt  tile-014.txt  tile-015.txt  tile-016.txt  tile-017.txt  tile-018.txt  tile-019.txt  tile-020.txt  tile-021.txt  tile-022.txt  tile-023.txt  tile-024.txt  tile-025.txt  tile-026.txt  tile-027.txt  tile-028.txt  tile-029.txt
tests/fixtures/pixelrag/visual/: ground-truth.json  manifest.json  queries.json
