[package]
name = "pixelrag-core"
version = "0.0.0"
edition = "2021"
publish = false
description = "PixelRAG core orchestrator (render→embed→index→search) on the ruvector substrate (ADR-264)."

# ── M1: core pipeline wired to the ruvector substrate ────────────────────────
# Per ADR-264 §"Dependencies & trait contracts". M1 wires the HNSW backend via a
# path dep on ruvector-core and the generic Embedder trait via pixelrag-encoder.
# ruvector-rairs / ruvector-rabitq / ruvector-turbovec remain commented until the
# milestone that needs them (IVF-SQ fallback, allowlist contract, FastScan).
[dependencies]
ruvector-core   = { path = "../ruvector-core" }    # HNSW — M1 primary index backend
ruvector-rairs  = { path = "../ruvector-rairs" }   # IVF-Flat — M1 train-then-add IVF backend (ADR-193)
pixelrag-encoder = { path = "../pixelrag-encoder" } # generic Embedder trait + Image type
serde      = { workspace = true }                  # config + metadata (de)serialization
serde_json = { workspace = true }                  # darwin genome parsing (Config::from_darwin_json)

[dev-dependencies]
tempfile = "3"  # deterministic temp storage path for the synthetic-embedding plumbing tests

# ── M1 (deferred) ────────────────────────────────────────────────────────────
# ruvector-rabitq   = { path = "../ruvector-rabitq" } # AnnIndex trait + Hadamard rotation reuse
# ruvector-turbovec = { path = "../ruvector-turbovec", optional = true } # M2+ FastScan (ADR-254, if shipped)
# bincode = "1"                                        # *.pixelrag persistence (M2)

# [features]
# turbovec = ["dep:ruvector-turbovec"] # opt-in M2+ FastScan backend
